@@ -30,6 +30,7 @@ remove = Exporter
 remove = Carp
 remove = Encode
 remove = File::Glob
+remove = File::Path
 
 ; comes with THIS distro
 remove = FFI::Platypus::ConfigData
